# msc_citypage_weather

./: Cargo.toml  build.rs_bak
examples/: deserialize.rs  subscribe.rs
src/: consumer.rs  lib.rs
src/models/: forecast_full.rs  general.rs  mod.rs  site_list.rs  weather.rs
